--- a/includes-local/dashboard-teplaren/teplarenska-soustava.html
+++ b/includes-local/dashboard-teplaren/teplarenska-soustava.html
@@ -97,7 +97,7 @@
                 <dt>Dotace z Mod. fondu</dt>
                 <dd class="mf-total">
                     <i class="fa-solid fa-sack-dollar"></i>
-                    <b>{{ facility.mf_subsidies_total | format_number }}</b>&nbsp;mil. Kč
+                    <b>{{ facility.mf_subsidies_total | format_number }}</b>&nbsp;mil.&nbsp;Kč
                 </dd>
                 <div class="mf-per-household mb-3 detail"><b>{{ facility.mf_subsidies_per_household | format_number }}</b> Kč/vytápěnou dom.</div>
                 {% if facility.chp_subsidies and facility.chp_subsidies_total_accepted > 0 %}
